hide some secure info

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,9 @@ DB_DEBUG=false
 HASH_DRIVER=bcrypt
 
 LOGGER_LEVEL=debug
+
+TEST_USER_USERNAME=test
+TEST_USER_EMAIL_ADDRESS=test@test.com
+TEST_USER_FIRST_NAME=first
+TEST_USER_LAST_NAMES=last
+TEST_USER_GENDER=male
