--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
     "adonis-acl": "^1.1.1",
     "axios": "^0.19.0",
     "chalk": "^2.4.2",
-    "cross-env": "^5.2.0",
-    "date-fns": "^2.0.0-beta.4",
+    "cross-env": "^5.2.1",
+    "date-fns": "^2.1.0",
     "lodash": "^4.17.15",
-    "pg": "^7.12.0"
+    "pg": "^7.12.1"
   },
   "devDependencies": {
     "faker": "^4.1.0"
   },
   "resolutions": {
-    "knex": "0.19.1"
+    "knex": "0.19.4"
   },
   "autoload": {
     "App": "./app"
