--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,7 @@ HASH_DRIVER=bcrypt
 
 LOGGER_LEVEL=debug
 
-TEST_USER_USERNAME=test
-TEST_USER_EMAIL_ADDRESS=test@test.com
-TEST_USER_FIRST_NAME=first
-TEST_USER_LAST_NAMES=last
-TEST_USER_GENDER=male
+REDIS_CONNECTION=local
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
