--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@adonisjs/framework": "^5.0.13",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/redis": "^2.0.7",
     "@adonisjs/validator": "^5.0.6",
     "adonis-acl": "^1.1.1",
     "axios": "^0.19.0",
