--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "cross-env": "^5.2.1",
     "date-fns": "^2.1.0",
     "lodash": "^4.17.15",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "uuid": "^3.3.3",
+    "uuid-validate": "^0.0.3"
   },
   "devDependencies": {
     "faker": "^4.1.0"
