fix json deserialiser and login

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,9 @@ REDIS_CONNECTION=local
 REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
+
+TEST_USER_USERNAME=
+TEST_USER_EMAIL_ADDRESS=
+TEST_USER_FIRST_NAME=
+TEST_USER_LAST_NAMES=
+TEST_USER_GENDER=
