--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,6 @@ APP_NAME=KPCAFC-Server
 APP_URL=http://${HOST}:${PORT}
 APP_KEY=
 
-CACHE_VIEWS=false
-
 DB_CONNECTION=pg
 DB_HOST=127.0.0.1
 DB_PORT=
@@ -31,3 +29,7 @@ TEST_USER_EMAIL_ADDRESS=
 TEST_USER_FIRST_NAME=
 TEST_USER_LAST_NAMES=
 TEST_USER_GENDER=
+
+CACHE_VIEWS=false
+CACHE_STORE=redis
+CACHE_PREFIX=
