--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API server for KPCAFC Portal",
   "main": "server.js",
   "scripts": {
-    "dev": "adonis serve --dev --debug",
+    "dev": "adonis serve --dev",
+    "dev:debug": "adonis serve --dev --debug",
     "start": "cross-env NODE_ENV=production node server.js",
     "migrate:dev": "adonis migration:refresh && adonis seed",
     "migrate:production": "adonis migration:run --force",
@@ -24,10 +25,11 @@
     "@adonisjs/redis": "^2.0.7",
     "@adonisjs/validator": "^5.0.6",
     "adonis-acl": "^1.1.1",
+    "adonis-cache": "^0.3.4",
     "axios": "^0.19.0",
     "chalk": "^2.4.2",
     "cross-env": "^6.0.3",
-    "date-fns": "^2.4.1",
+    "date-fns": "^2.5.1",
     "lodash": "^4.17.15",
     "pg": "^7.12.1",
     "uuid": "^3.3.3",
